--- a/gallery.html
+++ b/gallery.html
@@ -21,25 +21,25 @@
         <section class="gallery-grid">
             <div class="gallery-item">
                 <a href="https://www.instagram.com/reel/DEMO_LINK1/" target="_blank">
-                    <img src="images/demo_1.jpg" alt="Blood Donation Camp" class="gallery-thumbnail">
+                    <img src="images/demo_1.jpeg" alt="Blood Donation Camp" class="gallery-thumbnail">
                     <p class="gallery-caption">Blood Donation Drive</p>
                 </a>
             </div>
             <div class="gallery-item">
                 <a href="https://www.instagram.com/reel/DEMO_LINK2/" target="_blank">
-                    <img src="images/demo_2.jpg" alt="Environmental Cleanup" class="gallery-thumbnail">
+                    <img src="images/demo_2.jpeg" alt="Environmental Cleanup" class="gallery-thumbnail">
                     <p class="gallery-caption">Environmental Cleanup</p>
                 </a>
             </div>
             <div class="gallery-item">
                 <a href="https://www.instagram.com/reel/DEMO_LINK3/" target="_blank">
-                    <img src="images/demo_3.jpg" alt="Literacy Workshop" class="gallery-thumbnail">
+                    <img src="images/demo_3.jpeg" alt="Literacy Workshop" class="gallery-thumbnail">
                     <p class="gallery-caption">Literacy Workshop</p>
                 </a>
             </div>
             <div class="gallery-item">
                 <a href="https://www.instagram.com/reel/DEMO_LINK4/" target="_blank">
-                    <img src="images/demo_4.jpg" alt="Disaster Relief" class="gallery-thumbnail">
+                    <img src="images/demo_4.jpeg" alt="Disaster Relief" class="gallery-thumbnail">
                     <p class="gallery-caption">Disaster Relief</p>
                 </a>
             </div>
@@ -50,4 +50,5 @@
         <p>&copy; 2024 NSS Holy Family. All Rights Reserved.</p>
     </footer>
 </body>
+
 </html>
