--- a/gallery.html
+++ b/gallery.html
@@ -18,31 +18,43 @@
         <h1 class="page-heading">Our Visual Journal</h1>
         <p class="page-intro">A collection of moments that capture the spirit of our service, the dedication of our volunteers, and the impact we create in our community.</p>
 
-        <section class="gallery-grid">
-            <div class="gallery-item">
+        <section class="gallery-container">
+            <figure class="gallery-item">
                 <a href="https://www.instagram.com/reel/DEMO_LINK1/" target="_blank">
-                    <img src="images/demo_1.jpeg" alt="Blood Donation Camp" class="gallery-thumbnail">
-                    <p class="gallery-caption">Blood Donation Drive</p>
+                    <img src="images/demo_1.jpeg" alt="Blood Donation Camp" class="gallery-image">
+                    <figcaption class="gallery-caption">Blood Donation Drive</figcaption>
                 </a>
-            </div>
-            <div class="gallery-item">
+            </figure>
+            <figure class="gallery-item">
                 <a href="https://www.instagram.com/reel/DEMO_LINK2/" target="_blank">
-                    <img src="images/demo_2.jpeg" alt="Environmental Cleanup" class="gallery-thumbnail">
-                    <p class="gallery-caption">Environmental Cleanup</p>
+                    <img src="images/demo_2.jpeg" alt="Environmental Cleanup" class="gallery-image">
+                    <figcaption class="gallery-caption">Environmental Cleanup</figcaption>
                 </a>
-            </div>
-            <div class="gallery-item">
+            </figure>
+            <figure class="gallery-item">
                 <a href="https://www.instagram.com/reel/DEMO_LINK3/" target="_blank">
-                    <img src="images/demo_3.jpeg" alt="Literacy Workshop" class="gallery-thumbnail">
-                    <p class="gallery-caption">Literacy Workshop</p>
+                    <img src="images/demo_3.jpeg" alt="Literacy Workshop" class="gallery-image">
+                    <figcaption class="gallery-caption">Literacy Workshop</figcaption>
                 </a>
-            </div>
-            <div class="gallery-item">
+            </figure>
+            <figure class="gallery-item">
                 <a href="https://www.instagram.com/reel/DEMO_LINK4/" target="_blank">
-                    <img src="images/demo_4.jpeg" alt="Disaster Relief" class="gallery-thumbnail">
-                    <p class="gallery-caption">Disaster Relief</p>
+                    <img src="images/demo_4.jpeg" alt="Disaster Relief" class="gallery-image">
+                    <figcaption class="gallery-caption">Disaster Relief</figcaption>
                 </a>
-            </div>
+            </figure>
+            <figure class="gallery-item">
+                <a href="https://www.instagram.com/reel/DEMO_LINK5/" target="_blank">
+                    <img src="images/demo_1.jpg" alt="Demo Image 5" class="gallery-image">
+                    <figcaption class="gallery-caption">Community Project</figcaption>
+                </a>
+            </figure>
+            <figure class="gallery-item">
+                <a href="https://www.instagram.com/reel/DEMO_LINK6/" target="_blank">
+                    <img src="images/demo_2.jpg" alt="Demo Image 6" class="gallery-image">
+                    <figcaption class="gallery-caption">Social Harmony</figcaption>
+                </a>
+            </figure>
         </section>
     </main>
 
@@ -50,5 +62,4 @@
         <p>&copy; 2024 NSS Holy Family. All Rights Reserved.</p>
     </footer>
 </body>
-
 </html>
